--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,13 @@
 .App {
   box-sizing: border-box;
-  font-family: 'GmarketSansMedium';
+  background-color: #f6f6f6;
+  font-family: "GmarketSansMedium";
 }
 
 @font-face {
-  font-family: 'GmarketSansMedium';
-  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff') format('woff');
+  font-family: "GmarketSansMedium";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff")
+    format("woff");
   font-weight: normal;
   font-style: normal;
 }
