--- a/src/routes/css/Main.css
+++ b/src/routes/css/Main.css
@@ -19,8 +19,8 @@
 .main-choice {
   width: 12vh;
   height: 12vh;
-  display: flex;
-  background-color: rgb(255, 255, 255);
+  /* display: flex; */
+  display: block;
   border-radius: 12px;
   margin-right: 2.5%;
   margin-left: 2.5%;
@@ -34,7 +34,6 @@
   border-radius: 12px;
 }
 
-
 .main-choice a {
   margin: auto;
   padding: auto;
@@ -45,13 +44,36 @@
 }
 
 .choice-text {
+  background-color: white;
+  box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.2);
   text-align: center;
   color: gray;
-  margin-bottom: 5vh;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin-bottom: 2vh;
+  margin-left: 10px;
+  margin-right: 10px;
+  border-radius: 10px;
+}
+
+/* 커뮤니티 부분만 */
+.choice-community {
+  background-color: white;
+  box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.2);
+  /* text-align: center; */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: gray;
+  margin-bottom: 1vh;
+  margin-left: 20px;
+  margin-right: 20px;
+  padding-top: 2vh;
+  border-radius: 10px;
 }
 
 .choice-img {
-  width: 12vh;
-  height: 12vh;
+  width: 10vh;
+  height: 10vh;
   margin: auto;
 }
