feat : navbar 아이콘 수정

--- a/src/components/css/test.css
+++ b/src/components/css/test.css
@@ -82,19 +82,19 @@
 }
 
 .toolbar__icon.is-active.icon--chart {
-  color: #00ff36;
+  color: #ffc600;
 }
 
 .toolbar__icon.is-active.icon--smile {
-  color: #24A1FD;
+  color: #ffc600;
 }
 
 .toolbar__icon.is-active.icon--bell {
-  color: #ff0030;
+  color: #ffc600;
 }
 
 .toolbar__icon.is-active.icon--search {
-  color: #e546ff;
+  color: #ffc600;
 }
 
 @keyframes bump {
