style : 배경색상, 레스토랑 스타일

--- a/src/routes/css/Main.css
+++ b/src/routes/css/Main.css
@@ -6,9 +6,9 @@
   font-weight: 300;
   padding-left: 15px;
   margin-bottom: 20px;
-  margin-top: 50px;
   text-align: center;
   font-size: 26px;
+  padding: 0
 }
 
 .main-flex {
