--- a/src/components/css/Button.module.css
+++ b/src/components/css/Button.module.css
@@ -145,7 +145,7 @@
   height: 21.53846153846154vw;
   border-radius: 20px;
   background-color: white;
-  margin: 1.75vw 1.75vw;
+  margin: 1.75vw 2.08vw;
   box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.2);
   padding: 0;
 
@@ -159,6 +159,28 @@
 
 .categoryrow {
   justify-content: center;
-  padding: 0 10vw;
+  padding: 0 auto;
+  width: 100%;
+  margin: 0
+}
 
+.topnavbar {
+  display: flex;
+  align-items: center;
+  padding: 25px 0px;
+}
+
+.navimg {
+  width: 20px;
+  height: 20px;
+}
+
+.navtext {
+  margin: 0;
+  margin: 2px 10px 0 10px;
+  font-size: 20px;
+}
+
+.categorynavdiv {
+  padding: 0 3%;
 }
