--- a/src/components/css/Button.module.css
+++ b/src/components/css/Button.module.css
@@ -198,3 +198,16 @@
   margin-top: 10px;
   font-size: medium;
 }
+
+.passwordbtn {
+  width: 20px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 9px 10px 0 0;
+}
+
+.passworddiv {
+  margin-bottom: 15px;
+  position: relative;
+}
