fix : 커뮤니티 페이지 디자인

--- a/src/routes/css/Community.css
+++ b/src/routes/css/Community.css
@@ -1,3 +1,43 @@
 .card-header {
   padding: 0;
 }
+
+.articlebtn {
+  --bs-btn-bg: lightsalmon;
+  --bs-btn-border-color: lightsalmon;
+  --bs-btn-active-bg: lightsalmon;
+  --bs-btn-active-border-color: lightsalmon;
+  --bs-btn-hover-bg: lightsalmon;
+  --bs-btn-hover-border-color: lightsalmon;
+  margin-left: 5px;
+}
+
+.community-titles {
+  margin-bottom: 20px;
+}
+
+.article-card {
+  background-color: white;
+  box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.2);
+  text-align: left;
+  color: gray;
+  padding-top: 10px;
+  padding-bottom: 5px;
+  padding-left: 10px;
+  margin-bottom: 1vh;
+  border-radius: 10px;
+}
+
+.article-title {
+  text-decoration: none;
+  color: lightsalmon;
+}
+
+.modal-btns {
+  text-align: right;
+}
+
+.article-list {
+  margin-bottom: 0px;
+  line-height: normal;
+}
