--- a/src/components/css/Profileupdate.css
+++ b/src/components/css/Profileupdate.css
@@ -24,8 +24,8 @@
   background-color: rgba(0, 225, 255, 0.733);
   box-shadow: inset 0px 0.5px 1px 1px rgb(104, 104, 104);
   border-radius: 50px;
-  -webkit-transition: .4s;
-  transition: .4s;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
 
 .gender-button .onoff-switch:before {
@@ -40,19 +40,19 @@
   background-position: center;
   background-color: rgba(0, 225, 255, 0.9);
   background-repeat: no-repeat;
-  -webkit-transition: .5s;
-  transition: .4s;
+  -webkit-transition: 0.5s;
+  transition: 0.4s;
   border-radius: 50px;
   box-shadow: 1px 1px 3px rgb(0, 0, 0);
   border-color: #222;
 }
 
-.gender-button input:checked+.onoff-switch {
+.gender-button input:checked + .onoff-switch {
   background-color: pink;
   box-shadow: inset 0.5px 0.5px 1px 0.5px rgb(104, 104, 104);
 }
 
-.gender-button input:checked+.onoff-switch:before {
+.gender-button input:checked + .onoff-switch:before {
   background-image: url("../../../public/female.png");
   left: 50px;
   background-color: rgba(255, 192, 203, 0.904);
@@ -88,8 +88,8 @@
   background-color: rgb(255, 148, 148);
   box-shadow: inset 0px 0.5px 1px 1px rgb(104, 104, 104);
   border-radius: 50px;
-  -webkit-transition: .4s;
-  transition: .4s;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
 
 .smoke-button .onoff-switch:before {
@@ -104,19 +104,19 @@
   background-position: center;
   background-color: rgba(255, 148, 148, 0.9);
   background-repeat: no-repeat;
-  -webkit-transition: .5s;
-  transition: .4s;
+  -webkit-transition: 0.5s;
+  transition: 0.4s;
   border-radius: 50px;
   box-shadow: 1px 1px 3px rgb(0, 0, 0);
   border-color: #222;
 }
 
-.smoke-button input:checked+.onoff-switch {
+.smoke-button input:checked + .onoff-switch {
   background-color: rgba(167, 167, 167, 0.9);
   box-shadow: inset 0.5px 0.5px 1px 0.5px rgb(104, 104, 104);
 }
 
-.smoke-button input:checked+.onoff-switch:before {
+.smoke-button input:checked + .onoff-switch:before {
   background-image: url("../../../public/no-smoking.png");
   left: 50px;
   background-color: rgba(167, 167, 167, 0.9);
@@ -152,8 +152,8 @@
   background-color: rgb(150, 150, 253);
   box-shadow: inset 0px 0.5px 1px 1px rgb(104, 104, 104);
   border-radius: 50px;
-  -webkit-transition: .4s;
-  transition: .4s;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
 
 .alcohol-button .onoff-switch:before {
@@ -168,19 +168,19 @@
   background-position: center;
   background-color: rgb(150, 150, 253, 0.9);
   background-repeat: no-repeat;
-  -webkit-transition: .5s;
-  transition: .4s;
+  -webkit-transition: 0.5s;
+  transition: 0.4s;
   border-radius: 50px;
   box-shadow: 1px 1px 3px rgb(0, 0, 0);
   border-color: #222;
 }
 
-.alcohol-button input:checked+.onoff-switch {
+.alcohol-button input:checked + .onoff-switch {
   background-color: rgba(167, 167, 167, 0.9);
   box-shadow: inset 0.5px 0.5px 1px 0.5px rgb(104, 104, 104);
 }
 
-.alcohol-button input:checked+.onoff-switch:before {
+.alcohol-button input:checked + .onoff-switch:before {
   background-image: url("../../../public/no-alcohol.png");
   left: 50px;
   background-color: rgba(167, 167, 167, 0.9);
@@ -216,8 +216,8 @@
   background-color: rgb(146, 255, 161);
   box-shadow: inset 0px 0.5px 1px 1px rgb(104, 104, 104);
   border-radius: 50px;
-  -webkit-transition: .4s;
-  transition: .4s;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
 
 .talk-button .onoff-switch:before {
@@ -232,19 +232,19 @@
   background-position: center;
   background-color: rgba(146, 255, 161, 0.9);
   background-repeat: no-repeat;
-  -webkit-transition: .5s;
-  transition: .4s;
+  -webkit-transition: 0.5s;
+  transition: 0.4s;
   border-radius: 50px;
   box-shadow: 1px 1px 3px rgb(0, 0, 0);
   border-color: #222;
 }
 
-.talk-button input:checked+.onoff-switch {
+.talk-button input:checked + .onoff-switch {
   background-color: rgba(167, 167, 167, 0.9);
   box-shadow: inset 0.5px 0.5px 1px 0.5px rgb(104, 104, 104);
 }
 
-.talk-button input:checked+.onoff-switch:before {
+.talk-button input:checked + .onoff-switch:before {
   background-image: url("../../../public/no-communication.png");
   left: 50px;
   background-color: rgba(167, 167, 167, 0.9);
@@ -258,11 +258,11 @@
   padding: 15px 10px;
 }
 
-.select input[type=radio] {
+.select input[type="radio"] {
   display: none;
 }
 
-.select input[type=radio]+label {
+.select input[type="radio"] + label {
   display: inline-block;
   cursor: pointer;
   height: 7vh;
@@ -275,16 +275,20 @@
   margin-right: 1.5vw;
 }
 
-.select input[type=radio]+label {
+.select input[type="radio"] + label {
   background-color: #fff;
 }
 
-.select input[type=radio]:checked+label {
-  background-color: rgba(194, 194, 194, 0.432);
-  box-shadow: 1px 1px 5px rgb(0, 0, 0);
+.select input[type="radio"]:checked + label {
+  background-color: lightsalmon;
+  box-shadow: 1px 1px 5px grey;
 }
 
 .speedimg {
   width: 70%;
   margin: 15%;
+}
+
+.file-form {
+  margin-bottom: 10px;
 }
