--- a/src/routes/css/MatchingRoomDetail.css
+++ b/src/routes/css/MatchingRoomDetail.css
@@ -3,13 +3,7 @@
   box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.2);
   color: gray;
   text-align: left;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  padding-left: 10px;
-  margin-top: 2vh;
-  margin-bottom: 2vh;
-  margin-left: 10px;
-  margin-right: 10px;
+  padding: 15px;
   border-radius: 10px;
 }
 
@@ -33,6 +27,7 @@
   border-radius: 5px;
   border: 0;
   outline: 0;
+  margin-top: 10px
 }
 
 .chattingRoomBtn a {
@@ -46,4 +41,13 @@
   border-radius: 5px;
   border: 0;
   outline: 0;
+}
+
+.matching-detail-h5 {
+  color: lightsalmon;;
+  margin-bottom: 3px;
+}
+
+.matching-detail-info {
+  margin-bottom: 15px;
 }
