--- a/src/components/css/Button.module.css
+++ b/src/components/css/Button.module.css
@@ -113,7 +113,7 @@
   font-size: 14px;
   line-height: 1;
   font-weight: 500;
-  background: #FEE500;
+  background: #fee500;
   border: 0;
   width: 100%;
   box-shadow: rgba(15, 15, 15, 0.05) 0px 1px 2px;
@@ -151,7 +151,6 @@
   margin: 1.75vw 2.08vw;
   box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.2);
   padding: 0;
-
 }
 
 .categoryimg {
@@ -164,7 +163,7 @@
   justify-content: center;
   padding: 0 auto;
   width: 100%;
-  margin: 0
+  margin: 0;
 }
 
 .topnavbar {
