--- a/src/routes/css/ResDetail.css
+++ b/src/routes/css/ResDetail.css
@@ -9,12 +9,10 @@
 .res-title {
   display: flex;
   align-items: center;
-  height: 60px;
+  height: 50px;
 }
 
 .res-chat-button {
-  text-decoration: none;
-  color: white;
   background-color: lightsalmon;
   border-color: lightsalmon;
   border-radius: 5px;
@@ -24,6 +22,11 @@
   outline: 0;
 }
 
+.res-chat-button a {
+  text-decoration: none;
+  color: white;
+}
+
 .res-date {
   color: gray;
   font-size: 12px;
@@ -31,7 +34,8 @@
 }
 
 .review-span {
-  font-size: 15px;
+  font-size: 12px;
+  color: gray;
 }
 
 .review-p {
