fix : 음식점 디테일 페이지 리뷰 모달추가

--- a/src/routes/css/MatchingRoomDetail.css
+++ b/src/routes/css/MatchingRoomDetail.css
@@ -27,12 +27,12 @@
   border-radius: 5px;
   border: 0;
   outline: 0;
-  margin-top: 10px
 }
 
 .chattingRoomBtn a {
   text-decoration: none;
   color: white;
+  padding: 0;
 }
 
 .chattingRoomBtn {
