--- a/src/components/css/Profileupdate.css
+++ b/src/components/css/Profileupdate.css
@@ -47,12 +47,12 @@
   border-color: #222;
 }
 
-.gender-button input:checked + .onoff-switch {
+.gender-button input:checked+.onoff-switch {
   background-color: pink;
   box-shadow: inset 0.5px 0.5px 1px 0.5px rgb(104, 104, 104);
 }
 
-.gender-button input:checked + .onoff-switch:before {
+.gender-button input:checked+.onoff-switch:before {
   background-image: url("../../../public/female.png");
   left: 50px;
   background-color: rgba(255, 192, 203, 0.904);
@@ -111,12 +111,12 @@
   border-color: #222;
 }
 
-.smoke-button input:checked + .onoff-switch {
+.smoke-button input:checked+.onoff-switch {
   background-color: rgba(167, 167, 167, 0.9);
   box-shadow: inset 0.5px 0.5px 1px 0.5px rgb(104, 104, 104);
 }
 
-.smoke-button input:checked + .onoff-switch:before {
+.smoke-button input:checked+.onoff-switch:before {
   background-image: url("../../../public/no-smoking.png");
   left: 50px;
   background-color: rgba(167, 167, 167, 0.9);
@@ -175,12 +175,12 @@
   border-color: #222;
 }
 
-.alcohol-button input:checked + .onoff-switch {
+.alcohol-button input:checked+.onoff-switch {
   background-color: rgba(167, 167, 167, 0.9);
   box-shadow: inset 0.5px 0.5px 1px 0.5px rgb(104, 104, 104);
 }
 
-.alcohol-button input:checked + .onoff-switch:before {
+.alcohol-button input:checked+.onoff-switch:before {
   background-image: url("../../../public/no-alcohol.png");
   left: 50px;
   background-color: rgba(167, 167, 167, 0.9);
@@ -239,12 +239,12 @@
   border-color: #222;
 }
 
-.talk-button input:checked + .onoff-switch {
+.talk-button input:checked+.onoff-switch {
   background-color: rgba(167, 167, 167, 0.9);
   box-shadow: inset 0.5px 0.5px 1px 0.5px rgb(104, 104, 104);
 }
 
-.talk-button input:checked + .onoff-switch:before {
+.talk-button input:checked+.onoff-switch:before {
   background-image: url("../../../public/no-communication.png");
   left: 50px;
   background-color: rgba(167, 167, 167, 0.9);
@@ -262,7 +262,7 @@
   display: none;
 }
 
-.select input[type="radio"] + label {
+.select input[type="radio"]+label {
   display: inline-block;
   cursor: pointer;
   height: 7vh;
@@ -275,11 +275,11 @@
   margin-right: 1.5vw;
 }
 
-.select input[type="radio"] + label {
+.select input[type="radio"]+label {
   background-color: #fff;
 }
 
-.select input[type="radio"]:checked + label {
+.select input[type="radio"]:checked+label {
   background-color: lightsalmon;
   box-shadow: 1px 1px 5px grey;
 }
@@ -291,4 +291,35 @@
 
 .file-form {
   margin-bottom: 10px;
+}
+
+#profile_img_upload {
+  width: 0.1px;
+  height: 0.1px;
+  opacity: 0;
+  overflow: hidden;
+  position: absolute;
+  z-index: -1;
+}
+
+#profile_img_upload+label {
+  border: 1px solid #d9e1e8;
+  background-color: #fff;
+  color: #2b90d9;
+  border-radius: 2rem;
+  padding: 8px 17px;
+  font-weight: 500;
+  font-size: 15px;
+  box-shadow: 1px 2px 3px 0px #f2f2f2;
+  outline: none;
+}
+
+#profile_img_upload:focus+label,
+#profile_img_upload+label:hover {
+  cursor: pointer;
+}
+
+.profileimg {
+  width: 150px;
+  border-radius: 50%;
 }
