--- a/src/components/css/Button.module.css
+++ b/src/components/css/Button.module.css
@@ -18,19 +18,18 @@
 
 .category {
   color: white;
-  background-color: rgb(255, 141, 121);
+  background-color: rgb(170, 170, 170);
   padding: 5px 5px;
   border: 0;
+  outline: 0;
   border-radius: 15px;
   width: 100px;
-  margin: 20px 0;
   font-size: small;
 }
 
 .name {
   font-weight: 1000;
   font-size: 28px;
-  margin: 20px 0;
 }
 
 .menuname {
