--- a/src/routes/css/MatchingRoom.css
+++ b/src/routes/css/MatchingRoom.css
@@ -24,3 +24,33 @@
 .matching-container {
   padding-bottom: 10px;
 }
+
+.matching-create-btn { 
+  background-color: lightsalmon;
+  border-color: lightsalmon;
+  border-radius: 5px;
+  color: white;
+  border: 0;
+  outline: 0;
+  height: 35px;
+  width: 100%;
+}
+
+.form-btn-position {
+  position: fixed;
+  z-index: 5;
+  right: 3%;
+  bottom: 10%;
+}
+
+.bg-black { 
+  position: fixed;
+  background: black;
+  opacity: 80%;
+  width: 100%;
+  height: 100%;
+  top:0;
+  left:0;
+  z-index: 8;
+}
+
