--- a/src/routes/css/ChatRoomDetail.css
+++ b/src/routes/css/ChatRoomDetail.css
@@ -1,18 +1,31 @@
-.chat-box {
-  border: 1px solid;
-  border-radius: 5px;
-  margin-bottom: 5px;
-}
-
 .profile-img {
   margin-right: 5px;
   border-radius: 50%;
-  width: 20px;
+  width: 40px;
+}
+
+.chat-box {
+  display: flex;
+  border: 0;
+  margin-bottom: 10px;
+}
+
+.chat-textarea {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.chat-username {
+  font-size: 12px;
 }
 
 .chat-text {
-  padding-left: 5px;
-  height: 30px;
+  background-color: rgb(219, 218, 218);
+  border-radius: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
+  height: 100%;
   line-height: 30px;
 }
 
@@ -21,7 +34,6 @@
   position: fixed;
   bottom: 80px;
   text-align: center;
-  width: 90%;
 }
 
 .sendbtn {
