--- a/src/routes/css/MatchingRoom.css
+++ b/src/routes/css/MatchingRoom.css
@@ -43,10 +43,9 @@
   bottom: 10%;
 }
 
-.bg-black { 
+.bga-black { 
   position: fixed;
-  background: black;
-  opacity: 80%;
+  background: rgba(0, 0, 0, 0.7);
   width: 100%;
   height: 100%;
   top:0;
@@ -54,3 +53,10 @@
   z-index: 8;
 }
 
+.bg-white {
+  background: white;
+  border-radius: 15px;
+  padding: 5px;
+  margin-top: 50px;
+  width:100%
+}
