--- a/src/routes/css/ChatRoomDetail.css
+++ b/src/routes/css/ChatRoomDetail.css
@@ -10,10 +10,23 @@
   margin-bottom: 10px;
 }
 
+.chat-box-me {
+  display: flex;
+  border: 0;
+  justify-content: flex-end;
+  margin-bottom: 10px;
+}
+
 .chat-textarea {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+}
+
+.chat-textarea-me {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
 }
 
 .chat-username {
@@ -29,11 +42,22 @@
   line-height: 30px;
 }
 
+.chat-text-me {
+  background-color: rgb(219, 218, 218);
+  border-radius: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
+  height: 100%;
+  line-height: 30px;
+}
+
 .send-form {
   display: flex;
   position: fixed;
   bottom: 80px;
   text-align: center;
+  width: 94%;
+  z-index: 6
 }
 
 .sendbtn {
@@ -44,5 +68,41 @@
   border: 0;
   outline: 0;
   margin-left: 5px;
-  width: 100px;
+  width: 80px
+}
+
+.sending-area {
+  position: fixed;
+  bottom: 0%;
+  left: 0;
+  height: 15.5%;
+  width: 100%;
+  background-color: #f6f6f6;
+}
+
+.sending-topnav {
+  position: fixed;
+  display: flex;
+  align-items: center;
+  padding: 25px 0px;
+}
+
+.sending-img {
+  width: 20px;
+  height: 20px;
+}
+
+.sending-navtext {
+  margin: 0;
+  margin: 2px 10px 0 10px;
+  font-size: 20px;
+}
+
+.sending-area-top {
+  position: fixed;
+  top: 0%;
+  left: 0;
+  height: 7%;
+  width: 100%;
+  background-color: #f6f6f6;
 }
