--- a/src/routes/css/MatchingRoom.css
+++ b/src/routes/css/MatchingRoom.css
@@ -25,7 +25,7 @@
   padding-bottom: 10px;
 }
 
-.matching-create-btn { 
+.matching-create-btn {
   background-color: lightsalmon;
   border-color: lightsalmon;
   border-radius: 5px;
@@ -43,13 +43,13 @@
   bottom: 10%;
 }
 
-.bga-black { 
+.bga-black {
   position: fixed;
   background: rgba(0, 0, 0, 0.7);
   width: 100%;
   height: 100%;
-  top:0;
-  left:0;
+  top: 0;
+  left: 0;
   z-index: 8;
 }
 
@@ -58,5 +58,21 @@
   border-radius: 15px;
   padding: 5px;
   margin-top: 50px;
-  width:100%
+  width: 100%;
+}
+
+.matching-detail-btn {
+  background-color: lightsalmon;
+  border-color: lightsalmon;
+  border-radius: 5px;
+  color: white;
+  border: 0;
+  outline: 0;
+  height: 35px;
+  width: 100%;
+}
+
+.matching-detail-link {
+  text-decoration: none;
+  color: white;
 }
