--- a/src/components/css/CreateMatchingForm.css
+++ b/src/components/css/CreateMatchingForm.css
@@ -2,3 +2,29 @@
   padding-bottom: 0;
   padding: 15px 15px;
 }
+
+.create-matching-btn {
+  background-color: lightsalmon;
+  border-color: lightsalmon;
+  color: white;
+  margin-right: 5px;
+  border-radius: 5px;
+  border: 0;
+  outline: 0;
+  width: 80px;
+  height: 40px;
+  font-size: 20px;
+}
+
+.end-matching-btn {
+  background-color: lightgrey;
+  border-color: lightgrey;
+  color: white;
+  margin-right: 5px;
+  border-radius: 5px;
+  border: 0;
+  outline: 0;
+  width: 80px;
+  height: 40px;
+  font-size: 20px;
+}
