fix : 네브바 버튼 수정

--- a/src/components/css/navbar.css
+++ b/src/components/css/navbar.css
@@ -29,3 +29,12 @@
   max-width: 33.48px;
   color: black;
 }
+
+.navtext1 {
+  font-size: 15px;
+  font-weight: 700;
+  /* : center; */
+  max-width: 33.48px;
+  color: black;
+  font-weight: 1000;
+}
