--- a/src/routes/css/ChatRoomDetail.css
+++ b/src/routes/css/ChatRoomDetail.css
@@ -56,7 +56,7 @@
   position: fixed;
   bottom: 80px;
   text-align: center;
-  width: 94%;
+  width: 90vw;
   z-index: 6
 }
 
@@ -75,7 +75,7 @@
   position: fixed;
   bottom: 0%;
   left: 0;
-  height: 15.5%;
+  height: 15%;
   width: 100%;
   background-color: #f6f6f6;
 }
