--- a/src/components/css/Main.css
+++ b/src/components/css/Main.css
@@ -12,6 +12,7 @@
 .main_image {
   position: absolute;
   height: 100vh;
+  width: 250vh;
   animation-name: move;
   animation-duration: 5s;
   animation-iteration-count: infinite;
